refactor case study views + link back

--- a/assets/stylesheeets/application.scss
+++ b/assets/stylesheeets/application.scss
@@ -140,6 +140,10 @@ span.strong{
 	color: white;
 }
 
+.fa:hover{
+	color:$secondary-green;
+}
+
 .content {
 	background-color:$primary-background; 
 	color:white;
