--- a/views/usy.erb
+++ b/views/usy.erb
@@ -1,28 +1,40 @@
-<div class="section row">
-	<div style="text-align:center;margin:50px 10px;" class="col-md-12 col-sm-12">
-		<h2><strong>Case Study: United Somali Youth</strong></h2></center>
-	</div>
+<div style="padding-top:50px;"class="section row">
+	<div class ="col-md-10 offset-md-2">
 
-	<div class="col-md-12 quote">
-		<div class="row">
-			<div class="quote-picture col-lg-1 offset-lg-2 col-md-2 offset-md-2 col-sm-11 offset-sm-1 col-xs-12">
+		<div style="text-align:center"class="row">
+
+			<div style="margin-bottom: 30px;" class="col-md-1 col-sm-12 col-xs-12">
+				<a href="/"><i class="fa fa-arrow-left fa-3x"></i></a>
+			</div>
+
+			<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+				<h2><strong>Case Study: United Somali Youth</strong></h2>
+			</div>
+
+			<div class="col-md-3 col-lg-3">
+			</div>
+
+			<div style="margin-top:60px;" class="quote-picture col-lg-2 col-md-3 col-sm-12 col-xs-12">
 				<img src="Shirley-Chen.png"></img>
 				<h5>Said Ahmed</h5>
 				<h5>President</h5>
 			</div>
-			<div class="quote col-lg-6 col-md-6 col-sm-11 col-xs-12">
+
+			<div style="margin-top:60px;" class="quote col-lg-7 col-md-7 col-sm-12 col-xs-12">
 				<i class="fa fa-quote-left fa-2x"></i>
-				Chippy Kennedy is the most amazing fucking person. Really fucked my shit up big time. I would fuck the shit out of him if I got a chance to. Literally saved my ass and then fucked me in the ass. So a lot of ass stuff from this guy. But good ass stuff. The real whole point of this quote, is this guy fucks<span class="quote">"</span>
+				<p>Chippy Kennedy is the most amazing fucking person. Really fucked my shit up big time. I would fuck the shit out of him if I got a chance to. Literally saved my ass and then fucked me in the ass. So a lot of ass stuff from this guy. But good ass stuff. The real whole point of this quote, is this guy fucks</p>
 				<i class="fa fa-quote-right fa-2x"></i>
 			</div>
-		</div>
-	</div>
 
-	<div style="margin-top:80px;"class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-11 offset-sm-1">
-		<p><span class="strong">The Challenge</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu justo</p>
-		<br>
-		<p><span class="strong">The Contribution</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu just</p>
-		<br>
-		<p><span class="strong">The Impact</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu just</p>
+			<div style="margin-top:80px;"class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+				<p><span class="strong">The Challenge</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu justo</p>
+				<br>
+				<p><span class="strong">The Contribution</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu just</p>
+				<br>
+				<p><span class="strong">The Impact</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu just</p>
+			</div>
+
+		</div>
+
 	</div>
 </div>
