mock out partnerships section

--- a/views/home.erb
+++ b/views/home.erb
@@ -70,11 +70,11 @@
 <div class="portfolio section row">
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1">
 		<div class="row">
-			<div class="col-md-6 col-xs-12 col-sm-12"> 
+			<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12"> 
 				<img style="display: block;margin: auto;margin-top:20px;"	src="Referrio.png">
 				<br><a href="referrio"><h5 class="font-link" style="text-align:center;"><strong>>> View the Case Study</strong> </h5></a>
 			</div>
-			<div class="col-md-6 col-xs-12 col-sm-12"> 
+			<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12"> 
 				<img style="display: block;margin: auto;margin-top:60px;"	src="USY.png" alt="United Somali Youth">
 				<br><a href="usy"><h5 class="font-link" style="text-align:center;"><strong>>> View the Case Study</strong> </h5></a>
 			</div>
@@ -105,7 +105,21 @@
 </div>
 
 <div class="partners section row">
-	partners
+	<div style="text-align:center;margin:30px 0px;;padding:0% 5%;" class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+		<img src="ALX.png">
+		<h2>ALX Creatives</h2>
+		<p>A creative digital agency focused on building brands through powerful imagery and social media strategy.</p>
+	</div>
+	<div style="text-align:center;margin:30px 0px;;padding:0% 5%;" class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+		<img src="elastiq.png">
+		<h2>Elastiq Design</h2>
+		<p>A user experience design and web development studio, focused on creating efficient and elegant solutions</p>
+	</div>
+	<div style="text-align:center;margin:30px 0px;;padding:0% 5%;" class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+		<img src="cassandra.png">
+		<h2>ALX Creatives</h2>
+		<p>A creative digital agency focused on building brands through powerful imagery and social media strategy.</p>
+	</div>
 </div>
 
 
