--- a/views/usy.erb
+++ b/views/usy.erb
@@ -4,7 +4,7 @@
 		<div style="text-align:center"class="row">
 
 			<div style="margin-bottom: 30px;" class="col-md-1 col-sm-12 col-xs-12">
-				<a href="/"><i class="fa fa-arrow-left fa-3x"></i></a>
+				<a href="/#portfolio"><i class="fa fa-arrow-left fa-3x"></i></a>
 			</div>
 
 			<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
