--- a/views/home.erb
+++ b/views/home.erb
@@ -107,18 +107,18 @@
 <div class="partners section row">
 	<div style="text-align:center;margin:30px 0px;;padding:0% 5%;" class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
 		<img src="ALX.png">
-		<h2>ALX Creatives</h2>
-		<p>A creative digital agency focused on building brands through powerful imagery and social media strategy.</p>
+		<h2 style="font-size:32px;">ALX Creatives</h2>
+		<p style="padding:0px 100px;">A creative digital agency focused on building brands through powerful imagery and social media strategy.</p>
 	</div>
 	<div style="text-align:center;margin:30px 0px;;padding:0% 5%;" class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
 		<img src="elastiq.png">
-		<h2>Elastiq Design</h2>
-		<p>A user experience design and web development studio, focused on creating efficient and elegant solutions</p>
+		<h2 style="font-size:32px;">Elastiq Design</h2>
+		<p style="padding:0px 100px;">A user experience design and web development studio, focused on creating efficient and elegant solutions.</p>
 	</div>
 	<div style="text-align:center;margin:30px 0px;;padding:0% 5%;" class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
 		<img src="cassandra.png">
-		<h2>ALX Creatives</h2>
-		<p>A creative digital agency focused on building brands through powerful imagery and social media strategy.</p>
+		<h2 style="font-size:32px;">Cassandra Gallagher</h2>
+		<p style="padding:0px 100px;">Independent UX / UI design with a focus on user-centered interactions and user-based changes.</p>
 	</div>
 </div>
 
