--- a/views/referrio.erb
+++ b/views/referrio.erb
@@ -26,13 +26,44 @@
 				<i class="fa fa-quote-right fa-2x"></i>
 			</div>
 
-			<div style="margin-top:80px;"class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-				<p><span class="strong">The Challenge</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu justo</p>
+			<div style="margin-top:80px;"class="case-study col-lg-9 col-md-9 col-sm-12 col-xs-12">
+				<p style="text-align:center;"><span class="strong">The Client</span></p>
+				<center><img src="Referrio_1.png"></img></center>
 				<br>
-				<p><span class="strong">The Contribution</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu just</p>
-				<br>
-				<p><span class="strong">The Impact</span> Lorem ipsum dolor sit amet, malesuada donec id non risus. Augue parturient orci dolor donec a vivamus, morbi fermentum nulla vitae donec velit convallis, amet sapien wisi in sed, suspendisse dis parturient, nulla tempor laoreet sollicitudin sed integer purus. Ut ipsum nec sit, risus nullam. Facilisi hendrerit consectetuer in. Tristique mauris ac fusce nostra, ante orci velit vestibulum nulla arcu tincidunt, lacinia nunc dui a lorem, orci commodo quis sed sed. Ut feugiat et, aliquam suscipit risus, nec diam, vulputate libero egestas vestibulum, sociis adipiscing dui pulvinar sed. Eget pharetra sed eu just</p>
+				<p>
+				Referrio is a software platform dedicated to providing tools to students and teachers in the shared process of requesting, writing, and retaining letters of recommendation. As an early stage startup, their initial goals were to discover their user base and related target market, build a minimum viable product, and offer a platform that prioritizes functional design.
+				</p>
 			</div>
+
+			<div style="margin-top:80px;"class="case-study col-lg-9 col-md-9 col-sm-12 col-xs-12">
+				<p style="text-align:center;"><span class="strong">The Challenge</span></p>
+				<center><img src="Referrio_2.png"></img></center>
+				<br>
+				<p>
+				Referrio wanted to give students an indispensable tool to save themselves and their teachers time while archiving the whole process for future success. At the very start, Referrio needed a lean and sustainable process to develop the initial idea, discover user needs, and build a usable product. From there, a goal was to create a user design and experience that was simple as possible. Along with design, there was a software goal of a website and platform that could be built quickly and reliably so that a future development team could continue iterations.
+				</p>
+			</div>
+
+			<div style="margin-top:80px;"class="case-study col-lg-9 col-md-9 col-sm-12 col-xs-12">
+				<p style="text-align:center;"><span class="strong">The Contribution</span></p>
+				<center><img src="Referrio_2.png"></img></center>
+				<br>
+				<p>
+				Working on a team with the founder, students, and teachers, we started by defining a process for design and development in order to quickly validate ideas, gain feedback, and leave room for new ideas and insights. With first goal of creating a simplified and enjoyable user experience, we integrated Rails, Bootstrap, and Typeform.io. These frameworks complimented the second goal of creating a scalable and quick-to-validate platform, which became a RESTful application on Ruby, Heroku, and Amazon Web Services S3.
+
+				We iterated on both the front-end design, and development of the product platform side-by-side. Both larger weekly product direction meetings and smaller daily technical discussions were structured to ask and answer the question “what value are we providing to our students? Our teachers?” Iterations of the application were sent out to controlled groups of students to infuse later parts of the development and design process with end-user feedback. Front end design, platform-wide technology, and operations plans and decisions were all made and changed as necessary to achieve the platform’s user-based goals.</p>	
+				</p>
+			</div>
+
+			<div style="margin-top:80px;"class="case-study col-lg-9 col-md-9 col-sm-12 col-xs-12">
+				<p style="text-align:center;"><span class="strong">The Impact</span></p>
+				<center><img src="Referrio_1.png"></img></center>
+				<br>
+				<p>
+				Referrio discovered a cutting edge process for users to sign up for, define, and request letters of recommendation. Their platform’s technology is structured from the ground-up around the user’s experience and is ready for continuous development and feature integration as their team and user base grows. As a startup company talking to investors, marketing teams and others, they can stand behind an entire branded design, web platform, and proprietary code libraries.</p>
+				</p>
+			</div>
+
 
 		</div>
 
