--- a/views/home.erb
+++ b/views/home.erb
@@ -1,19 +1,3 @@
-<div class="menu row">
-<ul style="width:300px;" class="nav flex-column">
-  <li class="nav-item">
-    <a class="nav-link" href="#header"><h5 style="margin-left:0px;">Chip Kennedy</h5></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#services"><i class="fa fa-square-o fa-2x"></i><h5>Services</h5></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#portfolio"><i class="fa fa-square-o fa-2x"></i><h5>Clients</h5></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#contact"><i class="fa fa-square-o fa-2x"></i><h5>Contact</h5></a>
-  </li>
-</ul>
-</div>
 
 <div class="header row" id="header">
 	<div class="col-md-10 offset-md-1 col-sm-10 offset-sm-1 col-xs-10 offset-xs-1"> 
@@ -76,7 +60,7 @@
 			</div>
 			<div class="col-lg-6 col-md-12 col-xs-12 col-sm-12"> 
 				<img style="display: block;margin: auto;margin-top:60px;"	src="USY.png" alt="United Somali Youth">
-				<br><a href="usy"><h5 class="font-link" style="text-align:center;"><strong>>> View the Case Study</strong> </h5></a>
+				<br><a href="usy"><h5 class="font-link" style="text-align:center;"></h5></a>
 			</div>
 			<div style="margin-top:50px;" class="col-md-12">
 				<div class="row">
@@ -130,27 +114,27 @@
 </div>
 
 
-<div class="contact section row">
-	<div class="col-md-2 offset-md-1 col-sm-2 offset-sm-1" id="phone">
+<div style="padding-top:60px;text-align:center" class="contact section row">
+	<div class="col-md-2 offset-md-1 col-sm-4 offset-sm-1" id="phone">
 			<i class="fa fa-5x fa-phone"></i>
 			<p class="phone-display">781.686.0332</p>
 	</div>
-	<div class="col-md-2 col-sm-2">
+	<div class="col-md-2 col-sm-4 col-xs-6">
 		<a target="_blank" href="mailto:chippykennedy32@gmail.com" style="color:white">
 			<i class="fa fa-5x fa-envelope"></i>
 		</a>
 	</div>
-	<div class="col-md-2 col-sm-2">
+	<div class="col-md-2 col-sm-4 col-xs-6">
 		<a target="_blank" href="https://twitter.com/chippykennedy" style="color:white">
 			<i class="fa fa-5x fa-twitter"></i>
 		</a>
 	</div>
-	<div class="col-md-2 col-sm-2">
+	<div class="col-md-2 col-sm-4 col-xs-6">
 		<a target="_blank" href="https://github.com/chippy-kennedy" style="color:white">
 			<i class="fa fa-5x fa-github"></i>
 		</a>
 	</div>
-	<div class="col-md-2 col-sm-2">
+	<div class="col-md-2 col-sm-4 col-xs-6">
 		<a target="_blank" href="https://www.linkedin.com/in/chippy-kennedy-384ba558" style="color:white">
 			<i class="fa fa-5x fa-linkedin"></i>
 		</a>
