--- a/views/referrio.erb
+++ b/views/referrio.erb
@@ -14,7 +14,7 @@
 			<div class="col-md-3 col-lg-3">
 			</div>
 
-			<div style="margin-top:60px;" class="quote-picture col-lg-2 col-md-3 col-sm-12 col-xs-12">
+			<!--<div style="margin-top:60px;" class="quote-picture col-lg-2 col-md-3 col-sm-12 col-xs-12">
 				<img src="Shirley-Chen.png"></img>
 				<h5>Joe Pavlisko</h5>
 				<h5>Founder & CEO</h5>
@@ -22,9 +22,9 @@
 
 			<div style="margin-top:60px;" class="quote col-lg-7 col-md-7 col-sm-12 col-xs-12">
 				<i class="fa fa-quote-left fa-2x"></i>
-				<p>Chippy Kennedy is the most amazing fucking person. Really fucked my shit up big time. I would fuck the shit out of him if I got a chance to. Literally saved my ass and then fucked me in the ass. So a lot of ass stuff from this guy. But good ass stuff. The real whole point of this quote, is this guy fucks</p>
+				<p></p>
 				<i class="fa fa-quote-right fa-2x"></i>
-			</div>
+			</div>-->
 
 			<div style="margin-top:80px;"class="case-study col-lg-9 col-md-9 col-sm-12 col-xs-12">
 				<p style="text-align:center;"><span class="strong">The Client</span></p>
