Repeating bg asset + tweak case study + fix bootstrap of contact icons

--- a/views/referrio.erb
+++ b/views/referrio.erb
@@ -67,5 +67,9 @@
 
 		</div>
 
+		<div class="col-md-10" style="text-align:center;">
+				<a href="/#portfolio"><i class="fa fa-arrow-left fa-3x"></i></a>
+		</div>
+
 	</div>
 </div>
