--- a/views/home.erb
+++ b/views/home.erb
@@ -115,26 +115,26 @@
 
 
 <div style="padding-top:60px;text-align:center" class="contact section row">
-	<div class="col-md-2 offset-md-1 col-sm-4 offset-sm-1" id="phone">
+	<div class="col-lg-2 col-md-4 offset-md-2 col-sm-6" id="phone">
 			<i class="fa fa-5x fa-phone"></i>
 			<p class="phone-display">781.686.0332</p>
 	</div>
-	<div class="col-md-2 col-sm-4 col-xs-6">
+	<div class="col-lg-1 col-md-4 col-sm-6 col-xs-12">
 		<a target="_blank" href="mailto:chippykennedy32@gmail.com" style="color:white">
 			<i class="fa fa-5x fa-envelope"></i>
 		</a>
 	</div>
-	<div class="col-md-2 col-sm-4 col-xs-6">
+	<div class="col-lg-1 col-md-4 col-sm-6 col-xs-12">
 		<a target="_blank" href="https://twitter.com/chippykennedy" style="color:white">
 			<i class="fa fa-5x fa-twitter"></i>
 		</a>
 	</div>
-	<div class="col-md-2 col-sm-4 col-xs-6">
+	<div class="col-lg-1 col-md-4 col-sm-6 col-xs-12">
 		<a target="_blank" href="https://github.com/chippy-kennedy" style="color:white">
 			<i class="fa fa-5x fa-github"></i>
 		</a>
 	</div>
-	<div class="col-md-2 col-sm-4 col-xs-6">
+	<div class="col-lg-1 col-md-4 col-sm-6 col-xs-12">
 		<a target="_blank" href="https://www.linkedin.com/in/chippy-kennedy-384ba558" style="color:white">
 			<i class="fa fa-5x fa-linkedin"></i>
 		</a>
