--- a/assets/stylesheeets/application.scss
+++ b/assets/stylesheeets/application.scss
@@ -18,8 +18,8 @@ body {
 }
 
 #main-content{
-	background: url("../background.jpg");
-	background-size: 100% auto;
+	background: url("../background.jpg") no-repeat center center fixed; 
+	background-size: auto 100%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	padding-top:90px;
@@ -190,7 +190,7 @@ span.strong{
 }
 #mission2{
 	background-color:$secondary-green;
-	color:$primary-green;
+	color:$teriary-green;
 }
 #mission3{
 	background-color:$teriary-green; //$primary-background; 
