--- a/views/home.erb
+++ b/views/home.erb
@@ -114,7 +114,7 @@
 
 
 <div style="padding-top:60px;text-align:center" class="contact section row">
-	<div class="col-lg-2 col-md-4 offset-md-2 col-sm-6" id="phone">
+	<div class="col-lg-1 col-md-4 offset-md-2 col-sm-6 col-xs-12" id="phone">
 			<i class="fa fa-5x fa-phone"></i>
 			<p class="phone-display">781.686.0332</p>
 	</div>
