Add Colektiv as partner. Fix contact divs

--- a/views/home.erb
+++ b/views/home.erb
@@ -103,6 +103,11 @@
 		<h2 style="font-size:32px;">Cassandra Gallagher</h2>
 		<p style="padding:0px 100px;">Independent UX / UI design with a focus on user-centered interactions and user-based changes.</p>
 	</div>
+	<div style="text-align:center;margin:30px 0px;;padding:0% 5%;" class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+		<img src="colektiv.png">
+		<h2 style="font-size:32px;">Colektiv Digital</h2>
+		<p style="padding:0px 100px;">A full stack user discovery, design, and development shop focusing on working with social impact organizations</p>
+	</div>
 </div>
 
 
@@ -114,26 +119,26 @@
 
 
 <div style="padding-top:60px;text-align:center" class="contact section row">
-	<div class="col-lg-1 col-md-4 offset-md-2 col-sm-6 col-xs-12" id="phone">
+	<div class="col-lg-2 col-md-4 offset-lg-1 offset-md-2 col-sm-6 col-xs-12" id="phone">
 			<i class="fa fa-5x fa-phone"></i>
 			<p class="phone-display">781.686.0332</p>
 	</div>
-	<div class="col-lg-1 col-md-4 col-sm-6 col-xs-12">
+	<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 		<a target="_blank" href="mailto:chippykennedy32@gmail.com" style="color:white">
 			<i class="fa fa-5x fa-envelope"></i>
 		</a>
 	</div>
-	<div class="col-lg-1 col-md-4 col-sm-6 col-xs-12">
+	<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 		<a target="_blank" href="https://twitter.com/chippykennedy" style="color:white">
 			<i class="fa fa-5x fa-twitter"></i>
 		</a>
 	</div>
-	<div class="col-lg-1 col-md-4 col-sm-6 col-xs-12">
+	<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 		<a target="_blank" href="https://github.com/chippy-kennedy" style="color:white">
 			<i class="fa fa-5x fa-github"></i>
 		</a>
 	</div>
-	<div class="col-lg-1 col-md-4 col-sm-6 col-xs-12">
+	<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
 		<a target="_blank" href="https://www.linkedin.com/in/chippy-kennedy-384ba558" style="color:white">
 			<i class="fa fa-5x fa-linkedin"></i>
 		</a>
