--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,6 +5,7 @@
 		<link href="<%= stylesheet_path('application') %>" rel="stylesheet"></link>
 		<script src="<%= javascript_path('application') %>"></script>
 		<script type="text/javascript" src="jquery-3.1.1.slim.min.js"></script>
+		<meta name="google-site-verification" content="O4ld_R1OENoy7kIxwVEpKHTqy3oxee_1blOt-k4ZHDI" />
 
 		<!-- Styles -->
 
